- Changed page title

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <div class="container bg-gradient-purple">
     <div class="row">
         <div style="width:100%">
-            <h1 class="titleHeader">Gematria Ciphers & Numbers</h1>
+            <h1 class="titleHeader">Ciphers & Numbers</h1>
         </div>
     </div>
 </div>
