--- a/index.html
+++ b/index.html
@@ -269,17 +269,10 @@
                 <option value="FullReductionKv">Full Reduction Kv</option>
             </select>
         </div>
+
+
     </div>
-    <div class="container horizontal-scrollable">
-        <div class="row text-center" id="elements-elements">
-        </div>
-        <div class="row">
-            <div id="elements-totals"></div>
-            <div id="elements-sum"></div>
-            <div id="elements-words"></div>
-            <div id="elements-words-sum">Summed weight: <span class="bold-green" id="elementsWordsSumLeft" data-totals="0"></span>.<span class="bold-green" id="elementsWordsSumRight" data-totals="0"></span></div>
-        </div>
-    </div>
+
     <div class="container">
         <div class="card bg-dark element-search-table">
             <table class="table-dark element-search-table">
@@ -301,7 +294,16 @@
                 </tr>
             </table>
         </div>
+    </div>
 
+    <div class="container horizontal-scrollable">
+        <div class="row text-center" id="elements-elements"></div>
+        <div class="row">
+            <div id="elements-totals"></div>
+            <div id="elements-sum"></div>
+            <div id="elements-words"></div>
+            <div id="elements-words-sum">Summed weight: <span class="bold-green" id="elementsWordsSumLeft" data-totals="0"></span>.<span class="bold-green" id="elementsWordsSumRight" data-totals="0"></span></div>
+        </div>
     </div>
         <div class="row">
             <div class="col-lg bg-gradient-lighter">
