--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
     </div>
 </div>
 <div class="container bg-gradient-purple">
+    <div class="center-screen" id="preloader">
+        <img src="img/preload4.gif" alt="No preloader here">
+    </div>
     <div class="row">
         <div style="width:100%">
             <h1 class="titleHeader">Ciphers & Numbers</h1>
@@ -296,14 +299,12 @@
         </div>
     </div>
 
-    <div class="container horizontal-scrollable">
+    <div class="bg-darker container horizontal-scrollable">
         <div class="row text-center" id="elements-elements"></div>
-        <div class="row">
-            <div id="elements-totals"></div>
-            <div id="elements-sum"></div>
-            <div id="elements-words"></div>
-            <div id="elements-words-sum">Summed weight: <span class="bold-green" id="elementsWordsSumLeft" data-totals="0"></span>.<span class="bold-green" id="elementsWordsSumRight" data-totals="0"></span></div>
-        </div>
+                <div id="elements-totals"></div>
+                <div id="elements-sum"></div>
+                <div id="elements-words"></div>
+                <div id="elements-words-sum"><span class="bold-white">&nbsp;&nbsp;Summed weight:</span> <span class="bold-green" id="elementsWordsSumLeft" data-totals="0"></span>.<span class="bold-green" id="elementsWordsSumRight" data-totals="0"></span></div>
     </div>
         <div class="row">
             <div class="col-lg bg-gradient-lighter">
