- Added Fibonacci cipher - Ordered cipher list

--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 
                 </tbody>
             </table>
-
         </div>
     </div>
 </div>
@@ -234,48 +233,45 @@
             <select class="form-control" name="cipher" id="ciph">
                 <option value="">Disabled</option>
                 <option value="Chaldean" selected>Chaldean</option>
-                <option value="Septinary">Septinary</option>
+                <option value="Composites">Composite numbers</option>
                 <option value="EnglishGematria">English Gematria</option>
-                <option value="HebrewGematria">Hebrew Gematria</option>
                 <option value="EnglishGematriaReversed">English Gematria Reversed</option>
                 <option value="EnglishExtendedGematria">English Extended Gematria</option>
-                <option value="ManlyPHallCipherA">Manly P Hall Cipher</option>
-                <option value="ManlyPHallCipherAReduction">Manly P Hall Cipher (Red.)</option>
-                <option value="ManlyPHallCipherAReversed">Manly P Hall Cipher (Rev.)</option>
-                <option value="ManlyPHallCipherAReversedReduction">Manly P Hall Cipher (Red. Rev.)</option>
-                <option value="Satanic">Satanic</option>
-                <option value="SatanicReduction">Satanic (Red.)</option>
-                <option value="SatanicReversed">Satanic (Rev.)</option>
-                <option value="SatanicReversedReduction">Satanic (Rev.Red.)</option>
-                <option value="FrancisBacon">Francis Bacon</option>
-                <option value="FrancisBaconis">Francis Baconis</option>
-                <option value="Composites">Composite numbers</option>
-                <option value="Nonary">Nonary</option>
-                <option value="Jewish">Jewish</option>
-                <option value="JewishGematria">Jewish Gematria</option>
-                <option value="JewishOrdinal">Jewish Ordinal</option>
-                <option value="JewishReduction">Jewish reduction</option>
-                <option value="Default">Default A=1.....Z=26</option>
                 <option value="EnglishOrdinal">English Ordinal</option>
                 <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                 <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                 <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
                 <option value="EnglishExtended">English Extended</option>
                 <option value="English026">English 0-26</option>
-                <option value="ALWKabbalah">ALWKabbalah</option>
-                <option value="KFWKabbalah">KFWKabbalah</option>
-                <option value="LCHKabbalah">LCHKabbalah</option>
-                <option value="Primes">Primes</option>
-                <option value="Trigonal">Trigonal</option>
-                <option value="Squares">Squares</option>
-                <option value="Hexagonals">Hexagonals</option>
+                <option value="Fibonacci">Fibonacci</option>
+                <option value="FrancisBacon">Francis Bacon</option>
+                <option value="FrancisBaconis">Francis Baconis</option>
                 <option value="FullReductionKv">Full Reduction Kv</option>
+                <option value="HebrewGematria">Hebrew Gematria</option>
+                <option value="Hexagonals">Hexagonals</option>
+                <option value="Jewish">Jewish</option>
+                <option value="JewishGematria">Jewish Gematria</option>
+                <option value="JewishOrdinal">Jewish Ordinal</option>
+                <option value="JewishReduction">Jewish reduction</option>
+                <option value="ALWKabbalah">(ALW)Kabbalah</option>
+                <option value="KFWKabbalah">(KFW)Kabbalah</option>
+                <option value="LCHKabbalah">(LCH)Kabbalah</option>
+                <option value="ManlyPHallCipherA">Manly P Hall Cipher</option>
+                <option value="ManlyPHallCipherAReduction">Manly P Hall Cipher (Red.)</option>
+                <option value="ManlyPHallCipherAReversed">Manly P Hall Cipher (Rev.)</option>
+                <option value="ManlyPHallCipherAReversedReduction">Manly P Hall Cipher (Red. Rev.)</option>
+                <option value="Nonary">Nonary</option>
+                <option value="Primes">Primes</option>
+                <option value="Septinary">Septinary</option>
+                <option value="Satanic">Satanic</option>
+                <option value="SatanicReduction">Satanic (Red.)</option>
+                <option value="SatanicReversed">Satanic (Rev.)</option>
+                <option value="SatanicReversedReduction">Satanic (Rev.Red.)</option>
+                <option value="Squares">Squares</option>
+                <option value="Trigonal">Trigonal</option>
             </select>
         </div>
-
-
     </div>
-
     <div class="container">
         <div class="card bg-dark element-search-table">
             <table class="table-dark element-search-table">
@@ -598,7 +594,7 @@
             </span>
                 </div>
             </div>
-                <div class="card-body" width="100%">
+                <div class="card-body">
                     <button id="phraseAddToHistoryButton" type="button" class="btn-sm btn-success">To history</button>
                     allisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumber
                 </div>
