- Moved 'Add to history' button to more logical place in UI

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                     <select class="form-control-sm" id="phrasesHistorySelect">
                         <option value="-1">Phrase history</option>
                     </select>
+                    <button id="phraseAddToHistoryButton" type="button" class="btn-sm btn-dribbble">To history</button>
                     <button class="btn-dark btn-sm" id="extra-ciphers-button" value="0">Extra Ciphers</button>
                 </div>
                 <div class="hidden extra_ciphers small" id="extra-ciphers-panel">
@@ -596,7 +597,6 @@
                 </div>
             </div>
                 <div class="card-body" width="100%">
-                    <button id="phraseAddToHistoryButton" type="button" class="btn-sm btn-success">To history</button>
                     allisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumberallisnumber
                 </div>
             </div>
