- Added ciphers:      - Primes reversed      - Trigonals reversed      - squares reversed      - English Ordinal Single Reduction      - english Orginal Single Reduction Reversed

--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
                 <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                 <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                 <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
+                <option value="EnglishOrdinalSingleReduction">English Ordinal Single Reduction</option>
+                <option value="EnglishOrdinalSingleReductionReversed">English Ordinal Single Reduction Reversed</option>
                 <option value="EnglishExtended">English Extended</option>
                 <option value="English026">English 0-26</option>
                 <option value="Fibonacci">Fibonacci</option>
@@ -261,15 +263,18 @@
                 <option value="ManlyPHallCipherAReduction">Manly P Hall Cipher (Red.)</option>
                 <option value="ManlyPHallCipherAReversed">Manly P Hall Cipher (Rev.)</option>
                 <option value="ManlyPHallCipherAReversedReduction">Manly P Hall Cipher (Red. Rev.)</option>
-                <option value="Nonary">Nonary</option>
+
                 <option value="Primes">Primes</option>
+                <option value="PrimesReversed">Primes Reversed</option>
                 <option value="Septinary">Septinary</option>
                 <option value="Satanic">Satanic</option>
                 <option value="SatanicReduction">Satanic (Red.)</option>
                 <option value="SatanicReversed">Satanic (Rev.)</option>
                 <option value="SatanicReversedReduction">Satanic (Rev.Red.)</option>
                 <option value="Squares">Squares</option>
+                <option value="SquaresReversed">SquaresReversed</option>
                 <option value="Trigonal">Trigonal</option>
+                <option value="TrigonalReversed">Trigonal Reversed</option>
             </select>
         </div>
     </div>
@@ -353,7 +358,6 @@
                                     <option value="FrancisBacon">Francis Bacon</option>
                                     <option value="FrancisBaconis">Francis Baconis</option>
                                     <option value="Composites">Composite numbers</option>
-                                    <option value="Nonary">Nonary</option>
                                     <option value="Jewish">Jewish</option>
                                     <option value="JewishGematria">Jewish Gematria</option>
                                     <option value="JewishOrdinal">Jewish Ordinal</option>
@@ -363,14 +367,19 @@
                                     <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                                     <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                                     <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
+                                    <option value="EnglishOrdinalSingleReduction">English Ordinal Single Reduction</option>
+                                    <option value="EnglishOrdinalSingleReductionReversed">English Ordinal Single Reduction Reversed</option>
                                     <option value="EnglishExtended">English Extended</option>
                                     <option value="English026">English 0-26</option>
                                     <option value="ALWKabbalah">ALWKabbalah</option>
                                     <option value="KFWKabbalah">KFWKabbalah</option>
                                     <option value="LCHKabbalah">LCHKabbalah</option>
                                     <option value="Primes">Primes</option>
+                                    <option value="PrimesReversed">Primes Reversed</option>
                                     <option value="Trigonal">Trigonal</option>
+                                    <option value="TrigonalReversed">Trigonal Reversed</option>
                                     <option value="Squares">Squares</option>
+                                    <option value="SquaresReversed">SquaresReversed</option>
                                     <option value="Hexagonals">Hexagonals</option>
                                     <option value="FullReductionKv">Full Reduction Kv</option>
                                 </select>
@@ -405,7 +414,6 @@
                                     <option value="FrancisBacon">Francis Bacon</option>
                                     <option value="FrancisBaconis">Francis Baconis</option>
                                     <option value="Composites">Composite numbers</option>
-                                    <option value="Nonary">Nonary</option>
                                     <option value="Jewish">Jewish</option>
                                     <option value="JewishGematria">Jewish Gematria</option>
                                     <option value="JewishOrdinal">Jewish Ordinal</option>
@@ -415,14 +423,19 @@
                                     <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                                     <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                                     <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
+                                    <option value="EnglishOrdinalSingleReduction">English Ordinal Single Reduction</option>
+                                    <option value="EnglishOrdinalSingleReductionReversed">English Ordinal Single Reduction Reversed</option>
                                     <option value="EnglishExtended">English Extended</option>
                                     <option value="English026">English 0-26</option>
                                     <option value="ALWKabbalah">ALWKabbalah</option>
                                     <option value="KFWKabbalah">KFWKabbalah</option>
                                     <option value="LCHKabbalah">LCHKabbalah</option>
                                     <option value="Primes">Primes</option>
+                                    <option value="PrimesReversed">Primes Reversed</option>
                                     <option value="Trigonal">Trigonal</option>
+                                    <option value="TrigonalReversed">Trigonal Reversed</option>
                                     <option value="Squares">Squares</option>
+                                    <option value="SquaresReversed">SquaresReversed</option>
                                     <option value="Hexagonals">Hexagonals</option>
                                     <option value="FullReductionKv">Full Reduction Kv</option>
                                 </select>
@@ -458,7 +471,6 @@
                                     <option value="FrancisBacon">Francis Bacon</option>
                                     <option value="FrancisBaconis">Francis Baconis</option>
                                     <option value="Composites">Composite numbers</option>
-                                    <option value="Nonary">Nonary</option>
                                     <option value="Jewish">Jewish</option>
                                     <option value="JewishGematria">Jewish Gematria</option>
                                     <option value="JewishOrdinal">Jewish Ordinal</option>
@@ -468,14 +480,19 @@
                                     <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                                     <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                                     <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
+                                    <option value="EnglishOrdinalSingleReduction">English Ordinal Single Reduction</option>
+                                    <option value="EnglishOrdinalSingleReductionReversed">English Ordinal Single Reduction Reversed</option>
                                     <option value="EnglishExtended">English Extended</option>
                                     <option value="English026">English 0-26</option>
                                     <option value="ALWKabbalah">ALWKabbalah</option>
                                     <option value="KFWKabbalah">KFWKabbalah</option>
                                     <option value="LCHKabbalah">LCHKabbalah</option>
                                     <option value="Primes">Primes</option>
+                                    <option value="PrimesReversed">Primes Reversed</option>
                                     <option value="Trigonal">Trigonal</option>
+                                    <option value="TrigonalReversed">Trigonal Reversed</option>
                                     <option value="Squares">Squares</option>
+                                    <option value="SquaresReversed">SquaresReversed</option>
                                     <option value="Hexagonals">Hexagonals</option>
                                     <option value="FullReductionKv">Full Reduction Kv</option>
                                 </select>
@@ -510,7 +527,6 @@
                                     <option value="FrancisBacon">Francis Bacon</option>
                                     <option value="FrancisBaconis">Francis Baconis</option>
                                     <option value="Composites">Composite numbers</option>
-                                    <option value="Nonary">Nonary</option>
                                     <option value="Jewish">Jewish</option>
                                     <option value="JewishGematria">Jewish Gematria</option>
                                     <option value="JewishOrdinal">Jewish Ordinal</option>
@@ -520,13 +536,17 @@
                                     <option value="EnglishOrdinalFullReduction">English Ordinal Full reduction</option>
                                     <option value="EnglishOrdinalReversed">English Ordinal reversed</option>
                                     <option value="EnglishOrdinalReversedFullReduction">English Ordinal reversed full reduction</option>
+                                    <option value="EnglishOrdinalSingleReduction">English Ordinal Single Reduction</option>
+                                    <option value="EnglishOrdinalSingleReductionReversed">English Ordinal Single Reduction Reversed</option>
                                     <option value="EnglishExtended">English Extended</option>
                                     <option value="English026">English 0-26</option>
                                     <option value="ALWKabbalah">ALWKabbalah</option>
                                     <option value="KFWKabbalah">KFWKabbalah</option>
                                     <option value="LCHKabbalah">LCHKabbalah</option>
                                     <option value="Primes">Primes</option>
+                                    <option value="PrimesReversed">Primes Reversed</option>
                                     <option value="Trigonal">Trigonal</option>
+                                    <option value="TrigonalReversed">Trigonal Reversed</option>
                                     <option value="Squares">Squares</option>
                                     <option value="Hexagonals">Hexagonals</option>
                                     <option value="FullReductionKv">Full Reduction Kv</option>
