- Added ciphers:      - Primes reversed      - Trigonals reversed      - squares reversed      - English Ordinal Single Reduction      - english Orginal Single Reduction Reversed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                     <th>
                         <span class="bold-blue" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Lucas">L</span>
                     </th>
-                    <th class="cellCentered">Mirror</th>
+                    <th>
+                        <span class="bold-blue" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Harshad">Ha</span>
+                    </th>
+
+                    <th class="cellCentered"><input class="form-control-sm" type="text" id="numberIn"></th>
                     <th>
                         <span class="bold-blue" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Composite/Non-prime">&rect;</span>
                     </th>
@@ -91,6 +95,9 @@
                     <th>
                         <span class="bold-blue" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Lucas">L</span>
                     </th>
+                    <th>
+                        <span class="bold-blue" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Harshad">Ha</span>
+                    </th>
                 </tr>
                 </thead>
                 <tbody>
@@ -106,6 +113,7 @@
                     <td class="bold-green" id="fml-octagonal" title="Octagonal"></td>
                     <td class="bold-green" id="fml-semi-prime" title="Semi prime"></td>
                     <td class="bold-green" id="fml-lucas" title="Lucas"></td>
+                    <td class="bold-green" id="fml-harshad" title="Harshad"></td>
                     <td></td>
                     <td class="bold-green" id="fmr-composite" title="Composite/non-prime"></td>
                     <td class="bold-green" id="fmr-prime" title="Prime"></td>
@@ -118,6 +126,7 @@
                     <td class="bold-green" id="fmr-octagonal" title="Octagonal"></td>
                     <td class="bold-green" id="fmr-semi-prime" title="Semi prime"></td>
                     <td class="bold-green" id="fmr-lucas" title="Lucas"></td>
+                    <td class="bold-green" id="fmr-harshad" title="Harshad"></td>
                 </tr>
                 <tr>
                     <td class="cellRight" colspan="10"><span class="bold-green" id="fml-number"></span></td>
@@ -648,7 +657,7 @@
 <script src="js/decoder/lucas.js"></script>
 <script src="js/decoder/elements.js"></script>
 <script src="js/decoder/NumberHandler.js"></script>
-<script src="js/decoder/FactorMatrix.js"></script>
+<script src="js/decoder/NumberCruncher.js"></script>
 <script src="js/decoder/CoreCiphersAndNumbers.js"></script>
 </body>
 </html>
