--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card-body">
-                    <div class="card bg-dark phrase-totals-table">
+                    <div class="card card-body bg-dark phrase-totals-table">
                         <span id="activeCipher" class="glow-red-blackbg"></span>
                         <span>Total: <span class="bold-green" id="A_total" data-totals="0">0</span></span>
                         <span>Reduced: <span class="bolded" id="B_total" data-totals="0">0</span></span>
